Fixing accordion cross on mobile from shrinking

--- a/assets/scss/_accordion.scss
+++ b/assets/scss/_accordion.scss
@@ -60,6 +60,7 @@
 
     .cross {
         flex-grow: 0;
+        flex-shrink: 0;
         .vertical {
             opacity: 1;
             transition: opacity 0.3s ease;
